--- a/Weather/Info.plist
+++ b/Weather/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>YahooAppID</key>
+	<string>$(YAHOO_APP_ID)</string>
+	<key>YahooClientID</key>
+	<string>$(YAHOO_CLIENT_ID)</string>
+	<key>YahooClientSecret</key>
+	<string>$(YAHOO_CLIENT_SECRET)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
